# borg_gr00t

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
borg_gr00t/: __init__.py  actions.py  embodiment.py  modality_config.py
borg_gr00t/configs/: __init__.py  borg_w1__modality.json
brev/: README.md
doc/: README.md
docker/: Dockerfile  README.md  brev_compose.yaml  cloud_compose.yaml  compose.yaml
scripts/: client_echo.py  evaluate_offline.py  evaluate_replay.py  finetune.py  inference_server_zmq.py  inference_service.py  plot_actions.py  server_echo.py
